--- a/Agents/App.config
+++ b/Agents/App.config
@@ -1,6 +1,6 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
-</configuration>
+<connectionStrings><add name="MaterialsDBEntities" connectionString="metadata=res://*/db.MaterialDBEntities.csdl|res://*/db.MaterialDBEntities.ssdl|res://*/db.MaterialDBEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=sql-ser-larisa\serv1215;initial catalog=MaterialsDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings></configuration>
