--- a/Agents/Agents.csproj
+++ b/Agents/Agents.csproj
@@ -14,6 +14,21 @@
     <WarningLevel>4</WarningLevel>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
+    <PublishUrl>publish\</PublishUrl>
+    <Install>true</Install>
+    <InstallFrom>Disk</InstallFrom>
+    <UpdateEnabled>false</UpdateEnabled>
+    <UpdateMode>Foreground</UpdateMode>
+    <UpdateInterval>7</UpdateInterval>
+    <UpdateIntervalUnits>Days</UpdateIntervalUnits>
+    <UpdatePeriodically>false</UpdatePeriodically>
+    <UpdateRequired>false</UpdateRequired>
+    <MapFileExtensions>true</MapFileExtensions>
+    <ApplicationRevision>0</ApplicationRevision>
+    <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
+    <IsWebBootstrapper>false</IsWebBootstrapper>
+    <UseApplicationTrust>false</UseApplicationTrust>
+    <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -34,9 +49,21 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>Лопушок.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
@@ -55,20 +82,69 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Page Include="MainWindow.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="MainWindow.xaml.cs">
-      <DependentUpon>MainWindow.xaml</DependentUpon>
-      <SubType>Code</SubType>
-    </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="db\Agent.cs">
+      <DependentUpon>MaterialDBEntities.tt</DependentUpon>
+    </Compile>
+    <Compile Include="db\AgentPriorityHistory.cs">
+      <DependentUpon>MaterialDBEntities.tt</DependentUpon>
+    </Compile>
+    <Compile Include="db\AgentType.cs">
+      <DependentUpon>MaterialDBEntities.tt</DependentUpon>
+    </Compile>
+    <Compile Include="db\Material.cs">
+      <DependentUpon>MaterialDBEntities.tt</DependentUpon>
+    </Compile>
+    <Compile Include="db\MaterialCountHistory.cs">
+      <DependentUpon>MaterialDBEntities.tt</DependentUpon>
+    </Compile>
+    <Compile Include="db\MaterialDBEntities.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>MaterialDBEntities.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="db\MaterialDBEntities.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>MaterialDBEntities.tt</DependentUpon>
+    </Compile>
+    <Compile Include="db\MaterialDBEntities.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>MaterialDBEntities.edmx</DependentUpon>
+    </Compile>
+    <Compile Include="db\MaterialType.cs">
+      <DependentUpon>MaterialDBEntities.tt</DependentUpon>
+    </Compile>
+    <Compile Include="db\Product.cs">
+      <DependentUpon>MaterialDBEntities.tt</DependentUpon>
+    </Compile>
+    <Compile Include="db\ProductCostHistory.cs">
+      <DependentUpon>MaterialDBEntities.tt</DependentUpon>
+    </Compile>
+    <Compile Include="db\ProductMaterial.cs">
+      <DependentUpon>MaterialDBEntities.tt</DependentUpon>
+    </Compile>
+    <Compile Include="db\ProductSale.cs">
+      <DependentUpon>MaterialDBEntities.tt</DependentUpon>
+    </Compile>
+    <Compile Include="db\ProductType.cs">
+      <DependentUpon>MaterialDBEntities.tt</DependentUpon>
+    </Compile>
+    <Compile Include="db\Shop.cs">
+      <DependentUpon>MaterialDBEntities.tt</DependentUpon>
+    </Compile>
+    <Compile Include="db\Supplier.cs">
+      <DependentUpon>MaterialDBEntities.tt</DependentUpon>
+    </Compile>
+    <Compile Include="db\sysdiagrams.cs">
+      <DependentUpon>MaterialDBEntities.tt</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -86,6 +162,14 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <EntityDeploy Include="db\MaterialDBEntities.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>MaterialDBEntities.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <None Include="db\MaterialDBEntities.edmx.diagram">
+      <DependentUpon>MaterialDBEntities.edmx</DependentUpon>
+    </None>
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -93,6 +177,39 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Лопушок.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="db\MaterialDBEntities.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>MaterialDBEntities.Context.cs</LastGenOutput>
+      <DependentUpon>MaterialDBEntities.edmx</DependentUpon>
+    </Content>
+    <Content Include="db\MaterialDBEntities.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>MaterialDBEntities.edmx</DependentUpon>
+      <LastGenOutput>MaterialDBEntities.cs</LastGenOutput>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Pages\" />
+  </ItemGroup>
+  <ItemGroup>
+    <BootstrapperPackage Include=".NETFramework,Version=v4.7.2">
+      <Visible>False</Visible>
+      <ProductName>Microsoft .NET Framework 4.7.2 %28x86 и x64%29</ProductName>
+      <Install>true</Install>
+    </BootstrapperPackage>
+    <BootstrapperPackage Include="Microsoft.Net.Framework.3.5.SP1">
+      <Visible>False</Visible>
+      <ProductName>.NET Framework 3.5 SP1</ProductName>
+      <Install>false</Install>
+    </BootstrapperPackage>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
